# gh-learn

./: .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  login.py  main.py  pyproject.toml  update_status.gql  utils.py
gh_learn/: .public.env.example  auth.py  config.py  exceptions.py  gh_learn.py  update_gh_status.py  utils.py
gh_learn/gql/: update_status.gql
