[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "gh-learn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
  "keyring>=25.6.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
]

[project.scripts]
gh-learn = "gh_learn.gh_learn:main"
